hphp/hack/test/typecheck/unsafe_cast/ignored/arity_error.php.exp
File "arity_error.php", line 4, characters 10-45:
This cast violates type safety and may lead to unexpected behavior at runtime. (Typing[4417])
File "arity_error.php", line 4, characters 10-45:
Too few arguments (required 1 but got 0) (Typing[4104])
  File "soundness.hhi", line 8, characters 10-20:
  Definition is here
File "arity_error.php", line 8, characters 10-52:
This cast violates type safety and may lead to unexpected behavior at runtime. (Typing[4417])
File "arity_error.php", line 8, characters 49-51:
Invalid argument (Typing[4110])
  File "soundness.hhi", line 8, characters 72-96:
  Expected `HH\FormatString<nothing>`
  File "arity_error.php", line 7, characters 23-27:
  But got `nonnull`
File "arity_error.php", line 8, characters 49-51:
This argument must be a literal format string (Typing[4027])
